[gd_scene load_steps=3 format=3 uid="uid://bxheuv1xhopgx"]

[ext_resource type="Script" path="res://UI/LevelCompletedUI/starholder4_3_star.gd" id="1_6b0mu"]
[ext_resource type="PackedScene" uid="uid://ckwyrstxu6iyv" path="res://UI/LevelCompletedUI/star_anim_ui.tscn" id="1_anoyr"]

[node name="Starholder4" type="GridContainer"]
anchors_preset = -1
anchor_left = 0.862
anchor_top = 0.247
anchor_right = 0.862
anchor_bottom = 0.247
offset_left = -81.024
offset_top = -32.056
offset_right = 80.976
offset_bottom = 31.944
theme_override_constants/h_separation = -15
columns = 3
script = ExtResource("1_6b0mu")

[node name="StarAnim1" parent="." instance=ExtResource("1_anoyr")]
visible = false
layout_mode = 2

[node name="StarAnim2" parent="." instance=ExtResource("1_anoyr")]
visible = false
layout_mode = 2

[node name="StarAnim3" parent="." instance=ExtResource("1_anoyr")]
visible = false
layout_mode = 2
